[package]
name = "dver"
version = "0.1.0"
edition = "2021"
authors = ["Sergio Triana Escobedo <stescobedo.31@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "CLI tool for managing .NET SDK versions, including installation and version switching."
homepage = "https://github.com/stescobedo92/dotnet-version-manager"
repository = "https://github.com/stescobedo92/dotnet-version-manager"
keywords = ["cli"]
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
once_cell = "1.19.0"
serde_json = "1.0.122"
reqwest = { version = "0.12.5", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
